fix: prevent clock from shifting content on tick

--- a/src/components/layouts/HeaderLayout/HeaderLayout.module.scss
+++ b/src/components/layouts/HeaderLayout/HeaderLayout.module.scss
@@ -26,8 +26,8 @@
 }
 
 .timeInfo {
-  min-width: 170px;
-  justify-content: space-between;
+  min-width: 175px;
+  justify-content: flex-start;
 }
 
 .exitButton {
